--- a/Pages/Formation.razor
+++ b/Pages/Formation.razor
@@ -6,7 +6,7 @@
 <h1>Formations</h1>
 <p class="sh1">
     Mes formations et sensibilisations adressent les différents aspects de la cybersécurité et sont systématiquement
-    adaptées au public visé.
+    adaptées au public visé
 </p>
 
 <div class="bgFormation">
