--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -4,7 +4,7 @@
 
 <link rel="icon" type="image/x-icon" href="~/Images/Favicon.ico" />
 <h1>TAISEN Solutions</h1>
-<p class="sh1">Taisen est une entreprise fondée en 2022. Cette structure me permet de vous accompagner pour la sécurisation de votre système d'information.</p>
+<p class="sh1">Taisen est une entreprise fondée en 2022. Cette structure me permet de vous accompagner pour la sécurisation de votre système d'information</p>
 
 <div class="bgBan">
     <br><br>
@@ -34,11 +34,5 @@
         </a>
     </form>
     <br>
-    <form>
-        <a href="https://github.com/Aif4thah">
-            <input type="button" class="button" value="R&D (github)">
-        </a>
-    </form>
-
 
 </div>
