--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -39,8 +39,8 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="https://github.com/Aif4thah">
-                <img src="Images/Github.png" class="imgNav" alt="--"> R&D
+            <NavLink class="nav-link" href="https://github.com/Aif4thah/Dojo-101">
+                <img src="Images/Github.png" class="imgNav" alt="--"> Base de connaissance
             </NavLink>
         </div>
 
