--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -16,25 +16,7 @@
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-flag" aria-hidden="true"></span> Accueil
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/accompagnement">
-                <span class="oi oi-task" aria-hidden="true"></span> Accompagnement
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/audits-ssi">
-                <span class="oi oi-pulse" aria-hidden="true"></span> Audits
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/Formations">
-                <span class="oi oi-puzzle-piece" aria-hidden="true"></span> Formations
+                <span class="oi oi-key" aria-hidden="true"></span> Offre
             </NavLink>
         </div>
 
