--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -21,13 +21,13 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="https://github.com/Aif4thah/Dojo-101">
+            <NavLink class="nav-link" href="/redirect/0">
                 <img src="Images/Github.png" class="imgNav" alt="--"> Base de connaissance
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="https://www.linkedin.com/in/mvacarella">
+            <NavLink class="nav-link" href="/redirect/1">
                 <img src="Images/in.png" class="imgNav" alt="--"> Experience
             </NavLink>
         </div>
@@ -51,4 +51,5 @@
     {
         collapseNavMenu = !collapseNavMenu;
     }
+
 }
