--- a/Pages/Redirect.razor
+++ b/Pages/Redirect.razor
@@ -23,7 +23,7 @@
     <h2>@description[i].h1</h2>
     <div class="bgDiv">
         <br>
-        <p>@description[i].p Afin de vous présenter ces informations de manière efficace vous allez être redirigé vers le site @description[i].site</p>
+        <p>@description[i].p Afin de vous présenter ces informations de manière optimale vous allez être redirigé vers le site @description[i].site</p>
     
     
         <form>
