--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -7,6 +7,17 @@
 
     <main>
         <article class="content px-4">
+            <div class="bgBan">
+                <br><br>
+                <img src="Images/Logov2.png" class="imgBan" alt="Conseil en sécurité des systèmes d’information">
+                <br><br>
+            </div>
+            <br>
+            <center>
+                <hr class="line">
+            </center>
+            <br>
+
             @Body
 
             <div>
