--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -5,19 +5,12 @@
 
 <PageTitle>Taisen solutions</PageTitle>
 <link rel="icon" type="image/x-icon" href="~/Images/Favicon.ico" />
+
+
 <h1>TAISEN Solutions</h1>
-<p class="sh1">Taisen est une entreprise fondée en 2022. Cette structure me permet de vous accompagner pour la sécurisation de votre système d'information</p>
-
-<div class="bgBan">
-    <br><br>
-    <img src="Images/Logov2.png" class="imgBan" alt="Conseil en sécurité des systèmes d’information">
-    <br><br>
-</div>
+<p class="sh2">Taisen est une entreprise fondée en 2022. Cette structure me permet de vous accompagner pour la sécurisation de votre système d'information</p>
 
 
-<center>
-    <hr class="line">
-</center>
 
 <div>
     <form>
@@ -38,7 +31,7 @@
 @if (description != null)
 {
     <h2>@description.h1</h2>
-    <p class="sh1">@description.sh1</p>
+    <p class="sh1">❝@description.sh1❞</p>
 
     <center>
         <hr class="line">
