--- a/Shared/NavMenu.razor.css
+++ b/Shared/NavMenu.razor.css
@@ -1,10 +1,10 @@
 .navbar-toggler {
-    background-color: black;
+    background-color: #1d1d1f;
 }
 
 .top-row {
     height: 3.5rem;
-    background-color: black;
+    background-color: #1d1d1f;
 }
 
 .navbar-brand {
